# demo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: release.yml
cli/: index.html
demo/: cli.py
docs/: README.md  cli.md
scripts/: build-commands-docs.sh  bump-version.py
search/: search_index.json
